# tiny-kanban

./: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  packagemaze-install-smoke.yml  packagemaze-install.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 2026_02_06_2103-07bf63b37417_initial_schema.py  2026_02_10_2232-dba094943a0c_add_due_date_to_cards.py  2026_03_01_0000-a1b2c3d4e5f6_migrate_tag_colors_to_palette.py
backend/app/: models.py  schemas.py  seed.py
backend/app/routers/: columns.py  tags.py
backend/tests/: test_tags.py
frontend/: .npmrc  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/__tests__/: TagBadge.test.tsx
frontend/src/api/: boardSettings.ts  columns.ts  tags.ts
frontend/src/components/board/: BoardContent.tsx  ColumnHeader.tsx  KanbanColumn.tsx
frontend/src/components/shared/: TagBadge.tsx  TagCreateDialog.tsx
frontend/src/constants/: colors.ts
frontend/src/hooks/: useArchive.ts  useColumns.ts
frontend/src/pages/: BoardPage.tsx
frontend/src/types/: index.ts
