[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "aiosqlite>=0.20",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.27",
    "black>=24.0",
    "pyflakes>=3.2",
]

[project.urls]
Homepage = "https://github.com/elthommy/tiny-kanban"
Repository = "https://github.com/elthommy/tiny-kanban"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
